--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
 
                     <strong>Work experience</strong>
                         <p> <br />
-                            Research Intern at <a href="https://www.imperial.ac.uk/civil-engineering/">Faculty of Engineering, Department of Civil and Environmental Engineering</a>, Imperial College London (Aug 2022-Sept 2022)<br />
-                            <br />Research Assistant / Software Engineer at <a href="https://www.ucl.ac.uk/mathematical-physical-sciences/">MAPS</a>, UCL (June 2022 - Sept 2022) <br/>
+                            Research Consultant / Intern at <a href="https://www.imperial.ac.uk/civil-engineering/">Faculty of Engineering, Department of Civil and Environmental Engineering</a>, Imperial College London (Aug 2022-Sept 2022)<br />
+                            <br />Research Software Engineer \ Assistant  at <a href="https://www.ucl.ac.uk/mathematical-physical-sciences/">MAPS</a>, UCL (June 2022 - Sept 2022) <br/>
                             <br />Research Intern at <a href="https://www.ucl.ac.uk/condensed-matter-material-physics/">CMMP</a>, UCL (June 2021 - Aug 2021) <br/>
                             <br />Summer research student at <a href="https://education.wolfram.com/summer-school/programs/physics/">Wolfram Summer School, Fundamental Physics Track</a>,
                             <br />Wolfram Research (June 2021 - July 2021)<br />
