--- a/research.html
+++ b/research.html
@@ -154,7 +154,7 @@ further improvements and extensions, ending with a conclusion.
                     <table width="900" height="auto" border="0">
                             <h3>Quantum Simulations of Antigen-Antibody reactions </h3> 
                             <br />
-                            An interdisciplinary, consultancy-basedresearch project on bioinformatics, computational biophysics and quantum technologies, as a part of my research internship within the <a href="https://www.imperial.ac.uk/civil-engineering/">Faculty of Engineering, Department of Civil and Environmental Engineering</a>, Imperial College London.
+                            An interdisciplinary, consultancy-based research project on bioinformatics, computational biophysics and quantum technologies, as a part of my research internship within the <a href="https://www.imperial.ac.uk/civil-engineering/">Faculty of Engineering, Department of Civil and Environmental Engineering</a>, Imperial College London.
                             <br /> <u>August 2022 - September 2022</u> <br/>
                             <p style="text-align:center;"><img src="./Research/antigen research/antigenantibody.png" alt="qtpt model" width = 50% ></p>
                             <p style="text-align:center;">Image from: Chang, T.-C., Wu, C.-C., Wang, S.-C., Chau, L.-K. &amp; Hsieh, W.-H. Using a fiber optic particle plasmon resonance biosensor to determine kinetic constants of antigen–antibody binding reaction. Analytical Chemistry 85, 245–250 (2012). 
