--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                             <br />Summer research student at <a href="https://education.wolfram.com/summer-school/programs/physics/">Wolfram Summer School, Fundamental Physics Track</a>,
                             <br />Wolfram Research (June 2021 - July 2021)<br />
                             <br />Research Assistant/Mentee in the <a href="https://uclconnectedsociety.weebly.com/research-mentorship-programme.html">UCL Connect.ed Mentorship Programme</a> (Jan 2021 - Apr 2021)<br />
-                            <br />Physics, Mathematics & Chemistry Private Tutor (Sept 2022 - Present, Summer 2019, 2020) <br />
+                            <br />Physics, Mathematics & Chemistry Private Tutor (Sept 2022 - June 2023, Summer 2019, 2020) <br />
 
                         </p><br />
                     
