--- a/research.html
+++ b/research.html
@@ -87,9 +87,9 @@
                             <br />
                             A master's project on theoretical condensed matter and quantum technologies.
                             <br /> <u>October 2022 - Present</u> <br/>
-                            <p style="text-align:center;"><img src="./Research/2DTTC.png" alt="qtpt model" width = 50% ></p>
-                            <p style="text-align:center;">Image showing the 2D Toric Code model where a form of topological time crystal arises.
-                            </br>Image from: Wahl, T. B., Han, B. & B ́eri, B. Topologically ordered time crystals. arXiv (2021).</br>
+                            <p style="text-align:center;"><img src="./Research/OBC_XYHN_spectrum_withDisorder_[L=100].png" alt="qtpt model" width = 70% ></p>
+                            <p style="text-align:center;">The energy dispersion against asymmetric hopping strength of the suggested disordered XY-Hatano-Nelson model with open boundary conditions. Blue dots are real part of eigenenergies and red dots are imaginary parts of the eigenenergies.
+                            
                             
                                 </p></br>
                             <p class = "bodytxt"> 
