--- a/research.html
+++ b/research.html
@@ -86,7 +86,7 @@
                             
                             <br />
                             A master's project on theoretical condensed matter and quantum technologies.
-                            <br /> <u>October 2022 - Present</u> <br/>
+                            <br /> <u>October 2022 - November 2023</u> <br/>
                             <p style="text-align:center;"><img src="./Research/OBC_XYHN_spectrum_withDisorder_[L=100].png" alt="qtpt model" width = 70% ></p>
                             <p style="text-align:center;">The energy dispersion against asymmetric hopping strength of the suggested disordered XY-Hatano-Nelson model with open boundary conditions. Blue dots are real part of eigenenergies and red dots are imaginary parts of the eigenenergies.
                             
